# psql

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  connection_pool.cpp  example.cpp  main.cpp  notification.cpp  pipeline.cpp  prepared_statements.cpp  simple.cpp  user_defined.cpp
include/asiofiedpq/: connection.hpp  error.hpp  oid_map.hpp  params.hpp  query_oids.hpp  result.hpp
include/asiofiedpq/detail/: builtin.hpp  deserialization.hpp  oid_of.hpp  result_handler.hpp  serialization.hpp  size_of.hpp  type_traits.hpp
include/psql/: connection.hpp  connection_pool.hpp  error.hpp  field.hpp  notification.hpp  oid_map.hpp  params.hpp  pipeline.hpp  query_oids.hpp  result.hpp  row.hpp  sqlstate.hpp
include/psql/detail/: builtins.hpp  deserialization.hpp  extract_new_udts.hpp  oid_map.hpp  oid_of.hpp  oid_pair.hpp  result_handler.hpp  serialization.hpp  size_of.hpp  type_name_of.hpp  type_traits.hpp  udt_pair.hpp
scripts/: errcode_parser.py
src/: connection.hpp  error.hpp  main.cpp  pipelined.hpp
